partial fix, Deactivated/hover buttons in box overlaps navbar #71

--- a/internal/static/css/form.css
+++ b/internal/static/css/form.css
@@ -103,7 +103,6 @@
 }
 
 .image-container {
-  position: relative; /* Create a positioning context */
   display: inline-block; /* Adjust based on your layout */
   width: fit-content;
 }
